--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-parallax": "^3.5.1",
+    "react-rough-notation": "^1.0.3",
     "react-router-dom": "^6.6.2",
     "typewriter-effect": "^2.19.0"
   },
