--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-lottie": "^1.2.3",
     "react-parallax": "^3.5.1",
     "react-rough-notation": "^1.0.3",
     "react-router-dom": "^6.6.2",
